[tool.poetry]
name = "cipher_yc3682"
version = "0.1.1"
description = ""
authors = ["yunxuan0724 <yc3682@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
Sphinx = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
